# mimicking-human-beings

./: .checkov.yaml  LICENSE  Makefile  README.md  build_and_deploy_lambda.sh  build_layer_lambda.sh  docker-compose.yml  pyproject.toml  requirements.txt
cdk/: README.md  __init__.py  app.py  cdk.context.json  requirements.txt
cdk/config/: __init__.py  config_loader.py  environment.py  settings.yaml
cdk/lambda/: lambda_handler.py  requirements.txt
cdk/mcp_constructs/: __init__.py  docker_builder.py  ecs_service.py  iam_policies.py  network.py
cdk/stacks/: __init__.py  client_stack.py  cluster_stack.py  key_stack.py  mcp_cluster.py  network_stack.py  service_stack.py
docker/: random-web  url-fetcher
examples/: client_example.py  random_web_server.py  roi_calculator_server.py  url_fetcher_server.py
mcp_client/: __about__.py  __init__.py  bedrock_client.py  mcp_client.py  server.py
mcp_server/: __about__.py  __init__.py  base_server.py  config.py  middleware.py  utils.py
scripts/: setup-hooks.sh
